# cmake-sfml-basic

./: CMakeLists.txt  README.md
src/: main.cpp
